Adding in a missed \gap

--- a/appendix.tex
+++ b/appendix.tex
@@ -558,6 +558,7 @@ $\hana{\hGamma}{\hexp}{\htau}$ are defined mutually inductively by Rules
       }
     }
   \end{equation*}
+  \gap{}
   \begin{equation*}
     \tag{\rname{EMNEHoleParent}}
     \inferrule{ }{
