uniform placement of judgmental forms in boxed for A.3.4

--- a/appendix.tex
+++ b/appendix.tex
@@ -1027,8 +1027,8 @@ defined mutually inductively by Rules (\ref{Arules:performSyn}) and Rules
   \end{equation*}
 \end{subequations}
 
+\noindent \fbox{$\performSynI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}{\htau'}$}
 \begin{subequations}
-  \fbox{$\performSynI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}{\htau'}$}
   \begin{equation*}
     \tag{\rname{DoRefl}}
     \inferrule{ }{
@@ -1047,8 +1047,8 @@ defined mutually inductively by Rules (\ref{Arules:performSyn}) and Rules
   \end{equation*}
 \end{subequations}
 
+\noindent \fbox{$\performAnaI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}$}
 \begin{subequations}
-  \fbox{$\performAnaI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}$}
   \begin{equation*}
     \tag{\rname{DoRefl}}
     \inferrule{ }{
