removed text next to three judgement forms in appendix, fixed indentation

--- a/appendix.tex
+++ b/appendix.tex
@@ -78,8 +78,7 @@ constructors in the Agda mechanization.
 
 \subsubsection{Function Type Matching}~
 \noindent
-\fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}~~\text{$\tau$ has
-  matched arrow type $\tarr{\htau_1}{\htau_2}$}
+\fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}
 \begin{subequations}
   \begin{equation*}
     \tag{\rname{MAHole}}
@@ -98,10 +97,9 @@ constructors in the Agda mechanization.
 
 \subsubsection{Synthesis and Analysis}
 The judgements $\hsyn{\hGamma}{\hexp}{\htau}$ and
-$\hana{\hGamma}{\hexp}{\htau}$ are defined mutually inductively by Rules
-(\ref{Arules:hsyn}) and Rules (\ref{Arules:hana}), respectively.
+$\hana{\hGamma}{\hexp}{\htau}$ are defined mutually inductively.
 
-\noindent\fbox{$\hsyn{\hGamma}{\hexp}{\htau}$}~~\text{$\hexp$ synthesizes $\htau$}
+\noindent\fbox{$\hsyn{\hGamma}{\hexp}{\htau}$}
 \begin{subequations}\label{Arules:hsyn}
   \begin{equation*}
     \tag{\rname{SAsc}}
@@ -163,7 +161,7 @@ $\hana{\hGamma}{\hexp}{\htau}$ are defined mutually inductively by Rules
     }
   \end{equation*}
 \end{subequations}
-\noindent\fbox{$\hana{\hGamma}{\hexp}{\htau}$}~~\text{$\hexp$ analyzes against $\htau$}
+\noindent\fbox{$\hana{\hGamma}{\hexp}{\htau}$}
 \begin{subequations}\label{Arules:hana}
   \begin{equation*}
     \tag{\rname{ASubsume}}
@@ -574,8 +572,7 @@ $\hana{\hGamma}{\hexp}{\htau}$ are defined mutually inductively by Rules
 \end{subequations}
 \subsubsection{Synthetic and Analytic Expression Actions}
 The synthetic and analytic expression action performance judgements are
-defined mutually inductively by Rules (\ref{Arules:performSyn}) and Rules
-(\ref{Arules:performAna}), respectively.
+defined mutually inductively.
 
 \noindent\fbox{$\performSyn{\hGamma}{\zexp}{\htau}{\alpha}{\zexp'}{\htau'}$}
 
@@ -1027,7 +1024,7 @@ defined mutually inductively by Rules (\ref{Arules:performSyn}) and Rules
 \end{subequations}
 
 \begin{subequations}
-  \fbox{$\performSynI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}{\htau'}$}
+\noindent\fbox{$\performSynI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}{\htau'}$}
   \begin{equation*}
     \tag{\rname{DoRefl}}
     \inferrule{ }{
@@ -1047,7 +1044,7 @@ defined mutually inductively by Rules (\ref{Arules:performSyn}) and Rules
 \end{subequations}
 
 \begin{subequations}
-  \fbox{$\performAnaI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}$}
+\noindent\fbox{$\performAnaI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}$}
   \begin{equation*}
     \tag{\rname{DoRefl}}
     \inferrule{ }{
