uniform placement of judgmental forms in boxed for A.1.2

--- a/appendix.tex
+++ b/appendix.tex
@@ -76,10 +76,10 @@ constructors in the Agda mechanization.
   \end{equation*}
 \end{subequations}
 
-\subsubsection{Function Type Matching}~
-\noindent
-\fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}~~\text{$\tau$ has
-  matched arrow type $\tarr{\htau_1}{\htau_2}$}
+\subsubsection{Function Type Matching}
+
+\noindent \fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}~~\text{$\tau$
+  has matched arrow type $\tarr{\htau_1}{\htau_2}$}
 \begin{subequations}
   \begin{equation*}
     \tag{\rname{MAHole}}
