missing closed braces

--- a/appendix.tex
+++ b/appendix.tex
@@ -1024,7 +1024,7 @@ defined mutually inductively.
   \end{equation*}
 \end{subequations}
 
-\noindent \fbox{$\performSynI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}{\htau'}
+\noindent \fbox{$\performSynI{\hGamma}{\zexp}{\htau}{\bar{\alpha}}{\zexp'}{\htau'}$}
 \begin{subequations}
   \begin{equation*}
     \tag{\rname{DoRefl}}
