function type matching box placement

--- a/appendix.tex
+++ b/appendix.tex
@@ -76,7 +76,7 @@ constructors in the Agda mechanization.
   \end{equation*}
 \end{subequations}
 
-\subsubsection{Function Type Matching}~
+\subsubsection{Function Type Matching}
 \noindent
 \fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}
 \begin{subequations}
